--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "mocha": "^10.6.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5"
+  },
+  "devDependencies": {
+    "wait-on": "^8.0.1"
   }
 }
