--- a/helper-browser/package.json
+++ b/helper-browser/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hellocoop/helper-browser",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "description": "Hellō helper functions for the browser",
     "source": "src/index.ts",
     "main": "dist/index.js",
@@ -37,12 +37,12 @@
     },
     "homepage": "https://www.hello.dev/docs/sdks/core-client",
     "devDependencies": {
-        "@hellocoop/types": "~1.1.6",
+        "@hellocoop/types": "^1.1.7",
         "esbuild": "^0.19.5",
         "rimraf": "^5.0.5",
         "typescript": "^5.2.2"
     },
     "dependencies": {
-        "@hellocoop/constants": "~1.1.6"
+        "@hellocoop/constants": "^1.1.7"
     }
 }
