--- a/fastify/package.json
+++ b/fastify/package.json
@@ -35,9 +35,8 @@
   },
   "scripts": {
     "watch": "tsc --watch --declaration",
-    "build": "npm run build:clean && npm run build:src",
-    "build:clean": "rimraf dist/",
-    "build:src": "tsc --declaration",
+    "prebuild": "rimraf dist node_modules",
+    "build": "tsc --declaration",
     "test": "npm run build && docker compose -f ./spec/docker-compose.yml up --build --abort-on-container-exit",
     "spec": "wait-on http://mockin:3333/mock && mocha './spec/**/*.spec.mjs'"
   },
