--- a/react/package.json
+++ b/react/package.json
@@ -32,16 +32,14 @@
   },
   "scripts": {
     "watch": "tsc --watch --declaration",
-    "build": "npm run build:clean && npm run build:src",
-    "build:clean": "rimraf dist/",
-    "build:src": "tsc --declaration"
+    "prebuild": "rimraf dist/",
+    "build": "tsc --declaration"
   },
   "peerDependencies": {
     "react": ">=17",
     "react-dom": ">=17"
   },
   "devDependencies": {
-    "@hellocoop/types": "~1.1.6",
     "@types/react": "^18.2.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -52,7 +50,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/constants": "~1.1.6",
+    "@hellocoop/definitions": "1.0.0",
     "swr": "^2.2.2"
   }
 }
