--- a/quickstart-nextjs/package.json
+++ b/quickstart-nextjs/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "rimraf dist node_modules",
     "build": "echo \"No build specified\" && exit 0"
   },
   "repository": {
