--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -67,5 +67,6 @@
     "cookie": "^1.0.1",
     "cors": "^2.8.5",
     "swr": "^2.2.2"
-  }
+  },
+  "gitHead": "018e57826706471620d6ac09e66121e53877c87e"
 }
