--- a/express/package.json
+++ b/express/package.json
@@ -57,9 +57,9 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/api": "~2.0.0",
+    "@hellocoop/api": "2.0.0",
     "@hellocoop/definitions": "1.0.0",
-    "@hellocoop/helper-server": "~2.0.0",
+    "@hellocoop/helper-server": "2.0.0",
     "cookie": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
