--- a/fastify/package.json
+++ b/fastify/package.json
@@ -53,7 +53,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/api": "~2.0.0",
+    "@hellocoop/api": "2.0.0",
     "dotenv": "^16.3.1",
     "fastify-plugin": "^4.5.1"
   },
