--- a/helper-server/package.json
+++ b/helper-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/helper-server",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Hellō helper functions for server",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -45,6 +45,6 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/definitions": "1.0.0"
+    "@hellocoop/definitions": "^1.0.1"
   }
 }
