--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/react",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "React SDK for Hellō https://hello.dev",
   "repository": {
     "type": "git",
@@ -50,7 +50,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@hellocoop/definitions": "1.0.0",
+    "@hellocoop/definitions": "^1.0.1",
     "swr": "^2.2.2"
   }
 }
