add vue and svelte to workspace

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "identifier",
     "nextjs",
     "quickstart",
-    "react"
+    "react",
+    "vue",
+    "svelte"
   ],
   "repository": {
     "type": "git",
