--- a/svelte/package.json
+++ b/svelte/package.json
@@ -8,7 +8,8 @@
 	},
 	"homepage": "https://www.hello.dev/docs/sdks/svelte",
 	"scripts": {
-		"build": "cp ../types/src/types.ts ./src/lib/ && svelte-kit sync && svelte-package && publint"
+		"build": "cp ../types/src/types.ts ./src/lib/ && svelte-kit sync && svelte-package && publint",
+		"prebuild": "rimraf dist node_modules"
 	},
 	"exports": {
 		".": {
@@ -58,6 +59,6 @@
 	"type": "module",
 	"dependencies": {
 		"sswr": "^2.0.0",
-		"@hellocoop/constants": "^1.1.6"
+		"@hellocoop/definitions": "^1.0.3"
 	}
 }
