--- a/svelte/package.json
+++ b/svelte/package.json
@@ -60,5 +60,6 @@
 	"dependencies": {
 		"@hellocoop/definitions": "^1.0.4",
 		"sswr": "^2.0.0"
-	}
+	},
+	"gitHead": "b418b4e249a7fe7025d467688e52132848b465a2"
 }
