--- a/api/package.json
+++ b/api/package.json
@@ -48,5 +48,6 @@
     "@hellocoop/definitions": "^1.0.4",
     "@hellocoop/helper-server": "^2.0.4",
     "cookie": "^1.0.1"
-  }
+  },
+  "gitHead": "b418b4e249a7fe7025d467688e52132848b465a2"
 }
