--- a/react/package.json
+++ b/react/package.json
@@ -52,5 +52,6 @@
   "dependencies": {
     "@hellocoop/definitions": "^1.0.4",
     "swr": "^2.2.2"
-  }
+  },
+  "gitHead": "b418b4e249a7fe7025d467688e52132848b465a2"
 }
