--- a/vue/package.json
+++ b/vue/package.json
@@ -50,5 +50,6 @@
 	"devDependencies": {
 		"typescript": "^5.2.2",
 		"vite-plugin-dts": "^3.6.3"
-	}
+	},
+	"gitHead": "b418b4e249a7fe7025d467688e52132848b465a2"
 }
