--- a/helper-browser/package.json
+++ b/helper-browser/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hellocoop/helper-browser",
-    "version": "2.4.0",
+    "version": "2.4.1",
     "description": "Hellō helper functions for the browser",
     "source": "src/index.ts",
     "main": "dist/index.js",
@@ -35,7 +35,7 @@
     "bugs": {
         "url": "https://github.com/hellocoop/packages/issues"
     },
-    "homepage": "https://www.hello.dev/docs/sdks/core-client",
+    "homepage": "https://www.hello.dev/docs/sdks/helper/",
     "devDependencies": {
         "esbuild": "^0.19.5",
         "rimraf": "^5.0.5",
