--- a/helper-server/package.json
+++ b/helper-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hellocoop/helper-server",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Hellō helper functions for server",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -36,7 +36,7 @@
   "bugs": {
     "url": "https://github.com/hellocoop/packages/issues"
   },
-  "homepage": "https://www.hello.dev/docs/sdks/core-client",
+  "homepage": "https://www.hello.dev/docs/sdks/helper/",
   "devDependencies": {
     "@types/node": "*",
     "typescript": "^5.2.2"
