--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "definitions",
     "express",
     "fastify",
-    "helper-browser",
-    "helper-server",
+    "helper/browser",
+    "helper/server",
     "identifier",
     "nextjs",
     "quickstart",
