--- a/helper/browser/tsconfig.json
+++ b/helper/browser/tsconfig.json
@@ -1,14 +1,11 @@
 {
     "extends": "@tsconfig/node18/tsconfig.json",
-    "include": ["src"],
+    "include": ["../src/common/*.ts","../src/browser/*.ts"],
     "exclude": ["node_modules", "./**/dist"],
     "compilerOptions": {
-        "paths": {
-            "utils": ["./src/index.ts"]
-        },
         "lib": ["dom"],
         "declaration": true,
-        "baseUrl": "./src/",
+        "baseUrl": "../",
         "target": "es2019",
         "strict": true,
         "outDir": "./dist"
