--- a/helper/server/package.json
+++ b/helper/server/package.json
@@ -3,15 +3,15 @@
   "version": "2.1.3",
   "description": "Hellō helper functions for server",
   "source": "src/index.ts",
-  "main": "dist/index.js",
+  "main": "dist/server/index.js",
   "type": "commonjs",
-  "types": "dist/index.d.ts",
+  "types": "dist/server/index.d.ts",
   "files": [
     "dist/"
   ],
   "scripts": {
     "watch": "tsc --watch --declaration",
-    "prebuild": "rimraf dist node_modules",
+    "prebuild": "rimraf dist",
     "build": "tsc --declaration",
     "test": "node --test"
   },
