--- a/svelte/package.json
+++ b/svelte/package.json
@@ -44,22 +44,23 @@
 		"svelte": "^4.0.0"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.1.1",
-		"@sveltejs/kit": "^1.20.4",
-		"@sveltejs/package": "^2.0.0",
-		"publint": "^0.1.9",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.9.1",
+		"@sveltejs/package": "^2.3.7",
+		"@sveltejs/vite-plugin-svelte": "^5.0.1",
+		"publint": "^0.2.12",
+		"svelte": "^5.10.0",
+		"svelte-check": "^4.1.1",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
+		"vite": "^6.0.3"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
+	"gitHead": "96cc2f3fa1a3724a4a96b19cc7c5d97f04cc49f8",
 	"dependencies": {
 		"@hellocoop/definitions": "^1.0.9",
-		"sswr": "^2.0.0"
-	},
-	"gitHead": "96cc2f3fa1a3724a4a96b19cc7c5d97f04cc49f8"
+		"sswr": "^2.1.0"
+	}
 }
