update idp test with domain_hint

--- a/fastify/spec/docker-compose.yml
+++ b/fastify/spec/docker-compose.yml
@@ -41,8 +41,8 @@ services:
         source: ../../api
         target: /usr/src/svr/api
       - type: bind 
-        source: ../../helper-server
-        target: /usr/src/svr/helper-server
+        source: ../../helper/server
+        target: /usr/src/svr/helper/server
       - type: bind 
         source: ../../definitions
         target: /usr/src/svr/definitions
