add in package info

--- a/express/tsconfig.json
+++ b/express/tsconfig.json
@@ -4,10 +4,11 @@
   "include": ["src"],
   "exclude": ["node_modules", "./**/dist"],
   "compilerOptions": {
+    "resolveJsonModule": true,
     "declarationMap": true,
     "declaration": true,
-    "baseUrl": "./src/",
-    "target": "ES2019",             // Target ES2019
+    "rootDir": "./src",
+    "target": "ES2022",
     "strict": true,
     "outDir": "./dist",
     "module": "CommonJS",           // Use CommonJS for module system
