--- a/fastify/tsconfig.json
+++ b/fastify/tsconfig.json
@@ -3,13 +3,14 @@
   "exclude": ["node_modules", "**/dist"],
   "include": ["src/*.ts"],
   "compilerOptions": {
+    "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "declarationMap": true,
-      "declaration": true,
-      "baseUrl": "./src/",
-      "lib": ["dom", "dom.iterable", "esnext"],
-      "target": "ES2022",
-      "strict": true,
-      "outDir": "./dist"
+    "declaration": true,
+    "rootDir": "./src",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "ES2022",
+    "strict": true,
+    "outDir": "./dist"
   }
 }
