--- a/nextjs/tsconfig.json
+++ b/nextjs/tsconfig.json
@@ -3,13 +3,14 @@
   "include": ["src"],
   "exclude": ["node_modules", "./**/dist"],
   "compilerOptions": {
-      "declarationMap": true,
-      "declaration": true,
-      "baseUrl": "./src/",
-      "lib": ["dom", "dom.iterable", "esnext"],
-      "target": "es2019",
-      "jsx": "react",
-      "strict": true,
-      "outDir": "./dist"
+    "resolveJsonModule": true,
+    "declarationMap": true,
+    "declaration": true,
+    "rootDir": "./src",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "es2019",
+    "jsx": "react",
+    "strict": true,
+    "outDir": "./dist"
   }
 }
