--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "prettier": "^3.4.2",
         "prettier-plugin-svelte": "^3.3.3",
         "rimraf": "^5.0.5",
+        "svelte-eslint-parser": "^0.43.0",
         "typescript-eslint": "^8.23.0",
         "wait-on": "^8.0.1"
     },
