--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "---": "-following may be out of date--",
         "patch-sample": "npm run build && cp -r quickstart ../hello-nextjs-sample/node_modules/@hellocoop/ && cp -r nextjs ../hello-nextjs-sample/node_modules/@hellocoop/ && cp -r react ../hello-nextjs-sample/node_modules/@hellocoop/ && cp -r core ../hello-nextjs-sample/node_modules/@hellocoop/ && cp -r types ../hello-nextjs-sample/node_modules/@hellocoop/ && rm -rf ../hello-nextjs-sample/.next",
         "format": "prettier --write .",
-        "lint": "prettier --check . && eslint . --fix"
+        "lint": "prettier --check . && eslint . --fix",
+        "check": "npm run format && npm run lint",
+        "prepare": "husky"
     },
     "author": {
         "name": "Hello Identity Co-op",
@@ -49,6 +51,7 @@
         "eslint-plugin-svelte": "^2.46.1",
         "eslint-plugin-vue": "^9.32.0",
         "esm": "^3.2.25",
+        "husky": "^9.1.7",
         "lerna": "^8.1.8",
         "mocha": "^10.6.0",
         "npm-run-all": "^4.1.5",
