--- a/vue/package.json
+++ b/vue/package.json
@@ -51,5 +51,6 @@
         "@vitejs/plugin-vue": "^5.2.1",
         "swrv": "^1.0.4",
         "vue": "^3.5.13"
-    }
+    },
+    "type": "module"
 }
