--- a/react/package.json
+++ b/react/package.json
@@ -53,6 +53,5 @@
         "@hellocoop/definitions": "^1.0.9",
         "swr": "^2.2.2"
     },
-    "gitHead": "96cc2f3fa1a3724a4a96b19cc7c5d97f04cc49f8",
-    "type": "module"
+    "gitHead": "96cc2f3fa1a3724a4a96b19cc7c5d97f04cc49f8"
 }
