--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -51,9 +51,9 @@
         "@types/cors": "^2.8.14",
         "@types/react": "^18.2.21",
         "eslint-config-next": "^13.5.1",
-        "next": "^14.2.15",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "next": "15.2.3",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "rimraf": "^5.0.1",
         "typescript": "^5.2.2"
     },
