--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hellocoop/nextjs",
-    "version": "3.2.8",
+    "version": "3.2.9-canary.3",
     "description": "Next.js SDK for Hellō https://hello.dev",
     "repository": {
         "type": "git",
@@ -51,9 +51,9 @@
         "@types/cors": "^2.8.14",
         "@types/react": "^18.2.21",
         "eslint-config-next": "^13.5.1",
-        "next": "^14.2.15",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "next": "15.2.3",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "rimraf": "^5.0.1",
         "typescript": "^5.2.2"
     },
@@ -63,7 +63,7 @@
     "dependencies": {
         "@hellocoop/api": "^2.2.7",
         "@hellocoop/helper-server": "^2.2.1",
-        "@hellocoop/react": "^3.1.9",
+        "@hellocoop/react": "^3.1.10-canary.0",
         "cookie": "^1.0.1",
         "cors": "^2.8.5",
         "swr": "^2.2.2"
