--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hellocoop/react",
-    "version": "3.1.9",
+    "version": "3.1.10-canary.0",
     "description": "React SDK for Hellō https://hello.dev",
     "repository": {
         "type": "git",
@@ -41,8 +41,8 @@
     },
     "devDependencies": {
         "@types/react": "^18.2.21",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "rimraf": "^5.0.1",
         "typescript": "^5.2.2"
     },
