--- a/express/package.json
+++ b/express/package.json
@@ -40,15 +40,15 @@
         "build": "tsc --declaration"
     },
     "peerDependencies": {
-        "express": "^4"
+        "express": "^4 ||^5"
     },
     "devDependencies": {
         "@playwright/test": "^1.42.1",
         "@tsconfig/node18": "^18.2.2",
         "@types/cookie": "^0.6.0",
-        "@types/express": "^4.17.20",
+        "@types/express": "^5.0.1",
         "@types/node": "*",
-        "express": "^4.18.2",
+        "express": "^5.1.0",
         "rimraf": "^5.0.1",
         "typescript": "^5.2.2"
     },
