fix: update tsconfig.json to include src/**/*.ts instead of src/*.ts
This fixes TypeScript module resolution issues in VS Code by including
files in subdirectories like src/handlers/ in the compilation scope.

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "@tsconfig/node18/tsconfig.json",
     "exclude": ["node_modules", "**/dist"],
-    "include": ["src/*.ts"],
+    "include": ["src/**/*.ts"],
     "compilerOptions": {
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
