--- a/express/package.json
+++ b/express/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hellocoop/express",
-    "version": "1.18.0",
+    "version": "1.19.0",
     "description": "Express SDK for Hellō https://hello.dev",
     "repository": {
         "type": "git",
@@ -34,7 +34,7 @@
         "url": "https://github.com/hellocoop/packages/issues"
     },
     "scripts": {
-        "test": "npm run build && npx playwright test",
+        "test": "npm run build && npx playwright test --reporter=line",
         "watch": "tsc --watch --declaration",
         "prebuild": "rimraf dist node_modules",
         "build": "tsc --declaration"
@@ -56,7 +56,7 @@
         "node": ">=18"
     },
     "dependencies": {
-        "@hellocoop/api": "^2.2.7",
+        "@hellocoop/api": "^2.3.0",
         "@hellocoop/definitions": "^1.0.9",
         "@hellocoop/helper-server": "^2.2.1",
         "cookie": "^1.0.1",
