feat: add @hellocoop/web-identity package
- Implement Verified Email Autocomplete protocol token functions
- Add RequestToken, IssuedToken, and PresentationToken generation/verification
- Add DNS-based issuer discovery with metadata and JWKS fetching
- Include comprehensive test suite with 136 tests
- Support both RSA and EdDSA algorithms
- Add caching and timeout configuration for network requests
- Provide complete TypeScript definitions and documentation
- Add .kiro/ to .gitignore to exclude IDE files

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "quickstart",
         "react",
         "svelte",
-        "vue"
+        "vue",
+        "web-identity"
     ],
     "repository": {
         "type": "git",
