Add npx support for live testing with Hello.coop
- Added bin field to package.json to enable 'npx @hellocoop/web-identity'
- Included test-verified-email.js script in published files
- Added comprehensive 'Try It Live' section to README with Hello.coop integration
- Users can now easily test the protocol by:
  1. Adding DNS TXT record: iss=hello.coop
  2. Getting user-hint cookie from Hello.coop
  3. Running: npx @hellocoop/web-identity email@domain.com user-hint <cookie>
- Perfect for testing DNS setup and seeing the protocol in action
- All tests passing (140/140), linting clean

--- a/web-identity/package.json
+++ b/web-identity/package.json
@@ -17,8 +17,12 @@
             "types": "./dist/types/index.d.ts"
         }
     },
+    "bin": {
+        "web-identity": "./test-verified-email.js"
+    },
     "files": [
-        "dist/"
+        "dist/",
+        "test-verified-email.js"
     ],
     "keywords": [
         "jwt",
