Add local changes before pull

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "workspaces": [
         "api",
         "definitions",
+        "email-verification",
         "express",
         "fastify",
         "helper/browser",
