--- a/better-auth/tsconfig.json
+++ b/better-auth/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "@tsconfig/node18/tsconfig.json",
     "include": ["src"],
-    "exclude": ["node_modules", "./**/dist"],
+    "exclude": ["node_modules", "./**/dist", "**/__tests__/**", "**/*.test.*", "**/*.spec.*"],
     "compilerOptions": {
         "resolveJsonModule": true,
         "declarationMap": true,
