Update dependencies and improve package configurations
- Added "next" dependency with version "^16.0.7" to both package.json and package-lock.json.
- Updated "react" and "react-dom" to version "19.2.1" in package-lock.json.
- Updated "vite" to version "5.4.21" in package-lock.json.
- Updated "@better-auth/core" and "@better-auth/telemetry" to version "1.4.5" in package-lock.json.
- Cleaned up unused dependencies and improved overall package structure.

--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
         "typescript-eslint": "^8.27.0",
         "wait-on": "^8.0.1"
     },
-    "private": true
+    "private": true,
+    "dependencies": {
+        "next": "^16.0.7"
+    }
 }
