--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -51,7 +51,7 @@
         "@types/cors": "^2.8.14",
         "@types/react": "^18.2.21",
         "eslint-config-next": "^15.4.4",
-        "next": "15.4.4",
+        "next": "^16.0.7",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "rimraf": "^5.0.1",
