--- a/better-auth/package.json
+++ b/better-auth/package.json
@@ -62,5 +62,6 @@
     },
     "dependencies": {
         "@hellocoop/definitions": "^1.0.11"
-    }
+    },
+    "gitHead": "8fd9702d71dffa88f965cbdee29349395496b49b"
 }
